# flux-mcp-server

./: .gitignore  MANIFEST.in  README.md  design.md  mcpserver.yaml  pyproject.toml  setup.cfg  setup.py
.devcontainer/: Dockerfile  devcontainer.json
configs/: mcpserver-ssl.yaml
docs/: design.md  mermaid.md
flux_mcp_server/: registry.py  version.py
flux_mcp_server/clusters/: interface.py  local.py  registry.py
flux_mcp_server/db/: __init__.py  interface.py  models.py  views.py
flux_mcp_server/events/: __main__.py  engine.py  receiver.py
flux_mcp_server/server/: __main__.py  app.py
flux_mcp_server/tools/: event.py  query.py
tests/: test_submit.py  test_submit_ssl.py  test_submit_token.py
